// Issue: #142109960
// Protocol Buffer definitions for network optimization and metrics
// Network Engineer - Network protocol extensions

syntax = "proto3";
package necp.realtime.v1;

option go_package = "github.com/necpgame/realtime-gateway-go/pkg/proto";

import "network-config-tickrate.proto";
import "network-config-zones.proto";

message NetworkMetrics {
  string zone_id = 1;
  int64 timestamp_ms = 2;
  int32 current_tickrate = 3;
  int32 target_tickrate = 4;
  double adjustment_factor = 5;
  int32 player_count = 6;
  int32 network_latency_ms = 7;
  double cpu_usage_percent = 8;
  int64 bandwidth_usage_kbps = 9;
}

message SpatialPartitioningConfig {
  bool enabled = 1;
  int32 grid_size_meters = 2;
  string visibility_range = 3;
  int32 max_visible_cells = 4;
  double traffic_reduction_percent = 5;
}

message SpatialShardingConfig {
  bool enabled = 1;
  int32 shard_count = 2;
  int32 shard_size_meters = 3;
  int32 edge_buffer_meters = 4;
  double traffic_reduction_percent = 5;
}

message ClusterConfig {
  bool enabled = 1;
  int32 server_count = 2;
  int32 players_per_server = 3;
  int32 shard_count = 4;
  int32 shard_size_meters = 5;
  int32 edge_buffer_meters = 6;
}

message NetworkOptimizationConfig {
  SpatialPartitioningConfig spatial_partitioning = 1;
  SpatialShardingConfig spatial_sharding = 2;
  ClusterConfig cluster = 3;
  bool event_aggregation_enabled = 4;
  int32 event_batch_window_ms = 5;
  bool lod_system_enabled = 6;
}

message ZoneNetworkConfig {
  string zone_id = 1;
  ZoneConfig zone_config = 2;
  AdaptiveTickRateConfig adaptive_tickrate = 3;
  NetworkOptimizationConfig optimization = 4;
}






